src/flag-definitions.h
@@ -266,7 +266,8 @@ HARMONY_SHIPPING(FLAG_SHIPPING_FEATURES)
 #undef FLAG_SHIPPING_FEATURES
 
 #ifdef V8_INTL_SUPPORT
-DEFINE_BOOL(icu_timezone_data, true, "get information about timezones from ICU")
+DEFINE_BOOL(icu_timezone_data, false,
+            "get information about timezones from ICU")
 #endif
 
 #ifdef V8_ENABLE_FUTURE
